Make rainbow text use darker colors in light mode, fix blurry elements after transform

--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -32,7 +32,7 @@
 	}
 
 	&:hover + #site-nav {
-		transform: perspective(var(--container-width));
+		transform: none;
 		pointer-events: auto;
 	}
 
@@ -47,7 +47,7 @@
 
 		&:hover,
 		&:has(*:focus-visible, *:focus) {
-			transform: perspective(var(--container-width));
+			transform: none;
 			pointer-events: all;
 		}
 	}
