--- a/sass/components/_rainbow.scss
+++ b/sass/components/_rainbow.scss
@@ -4,12 +4,12 @@
 	filter: drop-shadow(max(1px, 0.0625em) max(1px, 0.0625em) rgb(0 0 0 / 0.6));
 	background-image: linear-gradient(
 		to right,
-		#ff6188,
-		#fc9867,
-		#ffd866,
-		#a9dc76,
-		#78dce8,
-		#ab9df2
+		var(--monokai-red),
+		var(--monokai-orange),
+		var(--monokai-yellow),
+		var(--monokai-green),
+		var(--monokai-blue),
+		var(--monokai-purple)
 	);
 	background-clip: text;
 	color: transparent;
