--- a/sass/components/_variables.scss
+++ b/sass/components/_variables.scss
@@ -36,6 +36,15 @@
 		--shade-color: rgb(0 0 0 / 0.25);
 		--shine: rgb(255 255 255 / 0.1);
 
+		--monokai-red: #ff6188;
+		--monokai-orange: #fc9867;
+		--monokai-yellow: #ffd866;
+		--monokai-green: #a9dc76;
+		--monokai-blue: #78dce8;
+		--monokai-purple: #ab9df2;
+		--monokai-background: #2d2a2e;
+		--monokai-text: #fcfcfa;
+
 		color-scheme: dark;
 	}
 
@@ -66,6 +75,15 @@
 		--yellow-fg: rgb(156 110 3);
 		--shade-color: rgb(0 0 0 / 0.07);
 		--shine: rgb(255 255 255 / 0.3);
+
+		--monokai-red: #e14775;
+		--monokai-orange: #e16032;
+		--monokai-yellow: #cc7a0a;
+		--monokai-green: #269d69;
+		--monokai-blue: #1c8ca8;
+		--monokai-purple: #7058be;
+		--monokai-background: #faf4f2;
+		--monokai-text: #29242a;
 
 		// CONTAINERS
 		--container-width: 720px;
