--- a/sass/index/_polaroid.scss
+++ b/sass/index/_polaroid.scss
@@ -38,11 +38,11 @@
 	}
 
 	&:hover {
-		transform: perspective(var(--container-width));
+		transform: none;
 		box-shadow: var(--shadow);
 
 		&::after {
-			transform: perspective(var(--container-width));
+			transform: none;
 		}
 
 		#polaroid-shine {
